--- a/Development/TomPIT.Development.UI/Views/Ide/Designers/Transaction.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Ide/Designers/Transaction.cshtml
@@ -1,27 +1,27 @@
-﻿@model TomPIT.Application.Design.TransactionDesigner
+﻿@model TomPIT.Application.Design.Designers.TransactionDesigner
 
 @{
-    var css = string.Empty;
+	var css = string.Empty;
 
-    if (!string.IsNullOrWhiteSpace(Model.Transaction.CommandText))
-    {
-        <div class="mt-5 text-center collapse show" id="dataSourceDesignerInfo">
-            <i class="jumbo-font fal fa-database"></i>
-            <h3 class="text-center mt-5">@Model.Owner.Element.Title</h3>
-            <hr />
-            Command text:
-            <br />
-            <code>
-                @Model.Transaction.CommandText
-            </code>
+	if (!string.IsNullOrWhiteSpace(Model.Transaction.CommandText))
+	{
+		<div class="mt-5 text-center collapse show" id="dataSourceDesignerInfo">
+			<i class="jumbo-font fal fa-database"></i>
+			<h3 class="text-center mt-5">@Model.Owner.Element.Title</h3>
+			<hr />
+			Command text:
+			<br />
+			<code>
+				@Model.Transaction.CommandText
+			</code>
 
-            <p class="mt-5">
-                <a href="#" data-component="configure">Configure</a>
-            </p>
-        </div>
-        css = "collapse";
+			<p class="mt-5">
+				<a href="#" data-component="configure">Configure</a>
+			</p>
+		</div>
+		css = "collapse";
 
-        <script>
+		<script>
             ide.hideToolbar();
 
             $('a[data-component="configure"]').click(function (e) {
@@ -30,46 +30,46 @@
                 $('#dataSourceDesignerUI').collapse('show');
                 $('#dataSourceDesignerInfo').collapse();
             });
-        </script>
-    }
+		</script>
+	}
 
 
 }
 <div class="doc-canvas @css" id="dataSourceDesignerUI">
-    <div class="paper">
-        <h4 class="dev-title">Browse</h4>
-        <!form id="dsForm">
-            <div class="form-group" data-component="select">
-                <label for="editConnection">Connection</label>
-                <select id="editConnection">
-                    <!option value="">(Select)</!option>
-                    @foreach (var i in Model.Connections)
-                    {
-                        <!option value="@i.Token.AsString()">@i.Name</!option>
-                    }
-                </select>
-            </div>
-            <div class="form-group" data-component="select">
-                <label for="editObjectTypes">Object groups</label>
-                <select id="editObjectTypes"></select>
-            </div>
-            <div class="form-group" data-component="select">
-                <label for="editObjects">Objects</label>
-                <select id="editObjects"></select>
-            </div>
+	<div class="paper">
+		<h4 class="dev-title">Browse</h4>
+		<!form id="dsForm">
+			<div class="form-group" data-component="select">
+				<label for="editConnection">Connection</label>
+				<select id="editConnection">
+					<!option value="">(Select)</!option>
+					@foreach (var i in Model.Connections)
+					{
+						<!option value="@i.Token.AsString()">@i.Name</!option>
+					}
+				</select>
+			</div>
+			<div class="form-group" data-component="select">
+				<label for="editObjectTypes">Object groups</label>
+				<select id="editObjectTypes"></select>
+			</div>
+			<div class="form-group" data-component="select">
+				<label for="editObjects">Objects</label>
+				<select id="editObjects"></select>
+			</div>
 
-            <ul class="nav nav-tabs" id="devTabs" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="tabParameters" data-toggle="tab" href="#devTabContentParameters" role="tab" aria-controls="parameters" aria-selected="false">Parameters</a>
-                </li>
-            </ul>
-            <div class="tab-content" id="devTabsContent">
-                <div class="tab-pane fade dev-tab-content show active" id="devTabContentParameters" role="tabpanel" aria-labelledby="parameters">
-                    <ul id="listParameters" class="list-unstyled"></ul>
-                </div>
-            </div>
-        </!form>
-    </div>
+			<ul class="nav nav-tabs" id="devTabs" role="tablist">
+				<li class="nav-item">
+					<a class="nav-link active" id="tabParameters" data-toggle="tab" href="#devTabContentParameters" role="tab" aria-controls="parameters" aria-selected="false">Parameters</a>
+				</li>
+			</ul>
+			<div class="tab-content" id="devTabsContent">
+				<div class="tab-pane fade dev-tab-content show active" id="devTabContentParameters" role="tabpanel" aria-labelledby="parameters">
+					<ul id="listParameters" class="list-unstyled"></ul>
+				</div>
+			</div>
+		</!form>
+	</div>
 </div>
 <script>
     $('#dsForm').tpForm();
