--- a/Development/TomPIT.Development.UI/Views/ApiTest.cshtml
+++ b/Development/TomPIT.Development.UI/Views/ApiTest.cshtml
@@ -3,149 +3,149 @@
 @model TomPIT.Models.ApiTestModel
 
 @section head{
-    <environment names="Staging,Production">
-        <link rel="stylesheet" type="text/css" href="~/Assets/ide.min.css" />
-        <script src="~/Assets/ide.min.js"></script>
-    </environment>
-    <environment names="Development">
-        <link rel="stylesheet" type="text/css" href="~/Assets/Styles/development.css" />
-        <script src="~/Assets/Scripts/development.js"></script>
-        <script src="~/Assets/Scripts/textEditor.js"></script>
-    </environment>
+	<environment names="Staging,Production">
+		<link rel="stylesheet" type="text/css" href="~/Assets/ide.min.css" />
+		<script src="~/Assets/ide.min.js"></script>
+	</environment>
+	<environment names="Development">
+		<link rel="stylesheet" type="text/css" href="~/Assets/Styles/development.css" />
+		<script src="~/Assets/Scripts/ide.js"></script>
+		<script src="~/Assets/Scripts/textEditor.js"></script>
+	</environment>
 
 }
 
 @{
-    Layout = "~/Views/Shared/Shell.cshtml";
+	Layout = "~/Views/Shared/Shell.cshtml";
 
-    var text = string.Empty;
+	var text = string.Empty;
 }
 
 @{
-    var path = "Assets/Scripts/monaco/vs";
-    var ctx = Model as TomPIT.Services.IExecutionContext;
+	var path = "Assets/Libraries/monaco/vs";
+	var ctx = Model as TomPIT.Services.IExecutionContext;
 
-    if (ctx != null)
-    { path = ctx.MapPath("~/Assets/Scripts/monaco/vs"); }
+	if (ctx != null)
+	{ path = ctx.MapPath("~/Assets/Libraries/monaco/vs"); }
 }
 
-<script src="~/Assets/Scripts/monaco/vs/loader.js"></script>
+<script src="~/Assets/Libraries/monaco/vs/loader.js"></script>
 
 <div id="ide">
-    <div class="doc-canvas">
-        <div class="paper">
-            <div data-tp-tag="progress-container">
+	<div class="doc-canvas">
+		<div class="paper">
+			<div data-tp-tag="progress-container">
 
-            </div>
-            <div class="row">
-                <div class="col-3">
-                    <h6>Existing tests</h6>
-                    <hr />
-                    <div class="form-group">
-                        <label for="editTag">Tags</label>
-                        <div id="editTag"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="existingTests">Tests</label>
-                        <div id="existingTests"></div>
-                    </div>
-                </div>
-                <div class="col-9">
-                    <h6>Test <a href="#" class="float-right" id="clearCommand">x</a></h6>
-                    <hr />
-                    <div class="form-group">
-                        <label>API</label>
-                        <div id="editApi" />
-                    </div>
-                    <div class="form-group pt-1">
-                        <ul class="nav nav-tabs" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#navRequestBody" role="tab" data-toggle="tab" id="tabRequest">Request body</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#navResponseBody" role="tab" data-toggle="tab" id="tabResponse">Response body</a>
-                            </li>
+			</div>
+			<div class="row">
+				<div class="col-3">
+					<h6>Existing tests</h6>
+					<hr />
+					<div class="form-group">
+						<label for="editTag">Tags</label>
+						<div id="editTag"></div>
+					</div>
+					<div class="form-group">
+						<label for="existingTests">Tests</label>
+						<div id="existingTests"></div>
+					</div>
+				</div>
+				<div class="col-9">
+					<h6>Test <a href="#" class="float-right" id="clearCommand">x</a></h6>
+					<hr />
+					<div class="form-group">
+						<label>API</label>
+						<div id="editApi" />
+					</div>
+					<div class="form-group pt-1">
+						<ul class="nav nav-tabs" role="tablist">
+							<li class="nav-item">
+								<a class="nav-link active" href="#navRequestBody" role="tab" data-toggle="tab" id="tabRequest">Request body</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#navResponseBody" role="tab" data-toggle="tab" id="tabResponse">Response body</a>
+							</li>
 
-                        </ul>
-                        <div class="tab-content">
-                            <div id="navRequestBody" class="tab-pane fade in active show" role="tabpanel">
-                                <div id="designEditor" class="text-editor text-editor-int" data-fullscreen="true"></div>
-                            </div>
-                            <div id="navResponseBody" class="tab-pane fade" role="tabpanel">
-                                <div id="designEditorResponse" class="text-editor text-editor-int" data-fullscreen="true"></div>
-                            </div>
-                        </div>
-                        <div class="form-group pt-1">
-                            <button type="button" class="btn btn-primary" id="buttonSubmit">Submit</button>
-                            <div class="float-right">
-                                <div class="btn-toolbar">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-light" data-tp-tag="toolbar-action" id="btnSave">
-                                            Save
-                                        </button>
+						</ul>
+						<div class="tab-content">
+							<div id="navRequestBody" class="tab-pane fade in active show" role="tabpanel">
+								<div id="designEditor" class="text-editor text-editor-int" data-fullscreen="true"></div>
+							</div>
+							<div id="navResponseBody" class="tab-pane fade" role="tabpanel">
+								<div id="designEditorResponse" class="text-editor text-editor-int" data-fullscreen="true"></div>
+							</div>
+						</div>
+						<div class="form-group pt-1">
+							<button type="button" class="btn btn-primary" id="buttonSubmit">Submit</button>
+							<div class="float-right">
+								<div class="btn-toolbar">
+									<div class="btn-group">
+										<button type="button" class="btn btn-light" data-tp-tag="toolbar-action" id="btnSave">
+											Save
+										</button>
 
-                                        <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <span class="caret"></span>
-                                            <span class="sr-only">@SR.ToggleDropdown</span>
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li class="dropdown-item" id="liSaveAs"><a href="#" data-tp-tag="toolbar-action">Save as</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+										<button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<span class="caret"></span>
+											<span class="sr-only">@SR.ToggleDropdown</span>
+										</button>
+										<ul class="dropdown-menu">
+											<li class="dropdown-item" id="liSaveAs"><a href="#" data-tp-tag="toolbar-action">Save as</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
-                </div>
-            </div>
+				</div>
+			</div>
 
-        </div>
+		</div>
 
-    </div>
+	</div>
 </div>
 
 <div tabindex="-1" class="modal fade right collapse modal-stacked" id="saveModal" role="dialog" aria-labelledby="saveModal" data-backdrop="false">
-    <div class="modal-dialog modal-full-height modal-right" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <p class="heading lead">Save API test</p>
-                <button class="close" aria-label="Close" type="button" data-dismiss="modal">
-                    <span class="white-text" aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form id="saveForm">
-                    <div class="form-group">
-                        <label for="editName">Title</label>
-                        <div id="editTitle"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="editDescription">Description</label>
-                        <div id="editDescription"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="editTags">Tags</label>
-                        <div id="editTags"></div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-success" id="btnSaveTest">
-                    Save
-                </button>
-                <button type="button" class="btn btn-link" data-dismiss="modal">
-                    Cancel
-                </button>
-            </div>
-        </div>
-    </div>
+	<div class="modal-dialog modal-full-height modal-right" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<p class="heading lead">Save API test</p>
+				<button class="close" aria-label="Close" type="button" data-dismiss="modal">
+					<span class="white-text" aria-hidden="true">×</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form id="saveForm">
+					<div class="form-group">
+						<label for="editName">Title</label>
+						<div id="editTitle"></div>
+					</div>
+					<div class="form-group">
+						<label for="editDescription">Description</label>
+						<div id="editDescription"></div>
+					</div>
+					<div class="form-group">
+						<label for="editTags">Tags</label>
+						<div id="editTags"></div>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer justify-content-center">
+				<button type="button" class="btn btn-success" id="btnSaveTest">
+					Save
+				</button>
+				<button type="button" class="btn btn-link" data-dismiss="modal">
+					Cancel
+				</button>
+			</div>
+		</div>
+	</div>
 </div>
 
 @section Scripts{
-    <script>
-        DevExpress.ui.setTemplateEngine("underscore");
-    </script>
+	<script>
+		DevExpress.ui.setTemplateEngine("underscore");
+	</script>
 }
 
 <script>
