--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
@@ -24,3 +24,44 @@
 .remove-avatar {
 	font-size: 0.8rem;
 }
+
+
+.env-unit-add {
+	border: 2px dashed @Blue100;
+	background-color: @LightBlue50;
+	width: 100%;
+	color:@Blue300;
+	padding:5px;
+	text-align:center;
+	font-size:1.25rem;
+	cursor:pointer;
+}
+
+.unit-node.selected .env-unit-add {
+	border: 2px solid @LightBlue700;
+	color:#FFF;
+	background-color: @LightBlue500;
+}
+
+.unit-node.selected{
+	font-weight:bold;
+}
+
+.unit-node {
+	width: 100%;
+	padding: 5px;
+	cursor: pointer;
+}
+
+.unit-node-text{
+	padding-left:5px;
+}
+
+.unit-group{
+	padding-left:10px;
+	
+}
+
+.unit-group-content {
+	border-left: 1px dotted @Grey500;
+}
