--- a/Development/TomPIT.Ide.UI/Views/Ide/Actions/AddItems.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Actions/AddItems.cshtml
@@ -3,39 +3,54 @@
 @model TomPIT.Design.IDesignerToolbarAction
 
 @{
-    var action = Model as TomPIT.Actions.AddItems;
+	var action = Model as TomPIT.Actions.AddItems;
 
-    if (action.Items.Count == 0) { return; }
+	if (action.Items.Count == 0) { return; }
 }
 
 
 @{
-    var item = action.Items[0];
-    var css = !item.Visible ? "collapse" : string.Empty;
+	var item = action.Items[0];
+	var css = !item.Visible ? "collapse" : string.Empty;
 
-    if (!item.Enabled)
-    { css += " disabled"; }
+	if (!item.Enabled)
+	{ css += " disabled"; }
 
+	var glyph = string.IsNullOrWhiteSpace(action.Glyph)
+		? "fal fa-plus"
+		: action.Glyph;
 
-    <button @Html.TP().Attributes.Attribute("data-id", item.Id) type="button" class="btn btn-light btn-sm" data-tp-tag="toolbar-action">
-        <i class="fal fa-plus"></i> @Html.Raw(item.Text)
-    </button>
+	<button @Html.TP().Attributes.Attribute("data-id", item.Id) type="button" class="btn btn-light btn-sm" data-tp-tag="toolbar-action">
+		<i class="@glyph"></i> @Html.Raw(item.Text)
+	</button>
 }
 
 @if (action.Items.Count > 1)
 {
-    <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span class="caret"></span>
-        <span class="sr-only">@SR.ToggleDropdown</span>
-    </button>
+	<div class="dropdown">
+		<button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-target="">
+			<span class="caret"></span>
+			<span class="sr-only">@SR.ToggleDropdown</span>
+		</button>
 
+
+
+		<ul class="dropdown-menu">
+			@for (var i = 1; i < action.Items.Count; i++)
+			{
+				var ci = action.Items[i];
+
+				<li class="dropdown-item">
+					<a href="#" role="button" class="btn btn-link btn-sm" data-tp-tag="toolbar-action" @Html.TP().Attributes.Attribute("data-id", ci.Id)>
+						@if (!string.IsNullOrWhiteSpace(ci.Glyph))
+						{
+							<i class="@ci.Glyph"></i>
+						}
+						@ci.Text
+					</a>
+
+				</li>
+			}
+		</ul>
+	</div>
 }
-
-<ul class="dropdown-menu">
-    @for (var i = 1; i < action.Items.Count; i++)
-    {
-        var ci = action.Items[i];
-
-        <li class="dropdown-item"><a href="#" data-tp-tag="toolbar-action" @Html.TP().Attributes.Attribute("data-id", ci.Id)>@ci.Text</a></li>
-    }
-</ul>
