--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.css
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.css
@@ -17,3 +17,35 @@
 .remove-avatar {
   font-size: 0.8rem;
 }
+.env-unit-add {
+  border: 2px dashed #bbdefb;
+  background-color: #e1f5fe;
+  width: 100%;
+  color: #64b5f6;
+  padding: 5px;
+  text-align: center;
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+.unit-node.selected .env-unit-add {
+  border: 2px solid #0288d1;
+  color: #FFF;
+  background-color: #03a9f4;
+}
+.unit-node.selected {
+  font-weight: bold;
+}
+.unit-node {
+  width: 100%;
+  padding: 5px;
+  cursor: pointer;
+}
+.unit-node-text {
+  padding-left: 5px;
+}
+.unit-group {
+  padding-left: 10px;
+}
+.unit-group-content {
+  border-left: 1px dotted #9e9e9e;
+}
