--- a/Development/TomPIT.Development.UI/Views/Ide/Designers/Transaction.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Ide/Designers/Transaction.cshtml
@@ -1,4 +1,4 @@
-﻿@model TomPIT.Application.Design.Designers.TransactionDesigner
+﻿@model TomPIT.Designers.TransactionDesigner
 
 @{
 	var css = string.Empty;
