--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
@@ -65,3 +65,36 @@
 .unit-group-content {
 	border-left: 1px dotted @Grey500;
 }
+
+.info-box{
+	border-left: 3px solid;
+	padding:5px 15px;
+	margin:15px 0;
+
+}
+
+.info-box .info-box-header{
+	font-weight:700;
+	padding-bottom:5px;
+	font-size:1.25em;
+}
+
+.info-box.info{
+	border-left-color:@Info;
+}
+
+.info-box.primary {
+	border-left-color: @Primary;
+}
+.info-box.warning {
+	border-left-color: @Warning;
+}
+.info-box.danger {
+	border-left-color: @Danger;
+}
+.info-box.success {
+	border-left-color: @Success;
+}
+.info-box.secondary {
+	border-left-color: @Grey300;
+}
