--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/ide.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/ide.less
@@ -61,8 +61,8 @@ position:relative;
 #devDesigner {
 	height: auto;
 	position: relative;
-	max-height: ~"calc(100vh - 86px)";
-	min-height: ~"calc(100vh - 86px)";
+	max-height: ~"calc(100vh - 116px)";
+	min-height: ~"calc(100vh - 116px)";
 	overflow-y: auto;
 }
 
@@ -269,7 +269,13 @@ h4.dev-title{
 }
 
 .text-editor-sa {
-	height: ~"calc(100vh - 125px)" !important;
+	height: ~"calc(100vh - 183px)" !important;
+}
+
+.text-editor-int {
+	height: ~"calc(100vh - 350px)" !important;
+	border: 1px solid @Grey300 !important;
+	border-top: none !important;
 }
 
 .text-editor {
