Implemented Redirect for Rest services

--- a/Management/TomPIT.Management.UI/Views/Ide/Designers/PublisherSignup.cshtml
+++ b/Management/TomPIT.Management.UI/Views/Ide/Designers/PublisherSignup.cshtml
@@ -184,7 +184,7 @@
 			},
 			onComplete: function (data) {
 				$('#loginForm').html(data);
-				tompit.success('Publisher account successfully created. You can now publish and sell you micro services globally.', 'Congratulations and welcome to the Tom PIT marketplace!');
+				tompit.success('Publisher account successfully created. You are a step away from publishing and selling you microservices globally.', 'Congratulations and welcome to the Tom PIT marketplace!');
 			}
 		});
 	});
