--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/Designer.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/Designer.cshtml
@@ -16,5 +16,5 @@
     }
 }
 
-@Html.Partial("~/Views/Ide/Designers/Toolbar.cshtml", Model)
-@Html.Partial(view, model)
+@await Html.PartialAsync("~/Views/Ide/Designers/Toolbar.cshtml", Model)
+@await Html.PartialAsync(view, model)
