--- a/Development/TomPIT.Ide.UI/Views/Ide/Dom.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Dom.cshtml
@@ -32,5 +32,5 @@
 {
     ViewBag.CurrentNode = i;
 
-    @Html.Partial("~/Views/Ide/DomNode.cshtml", Model)
+    @await Html.PartialAsync("~/Views/Ide/DomNode.cshtml", Model)
 }
