--- a/Development/TomPIT.Ide.UI/Views/Ide/DomNode.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/DomNode.cshtml
@@ -42,7 +42,7 @@
             @foreach (var i in node.Items)
             {
                 ViewBag.CurrentNode = i;
-                @Html.Partial("~/Views/Ide/DomNode.cshtml", Model)
+                @await Html.PartialAsync("~/Views/Ide/DomNode.cshtml", Model)
             }
 
         </div>
