--- a/Management/TomPIT.Management.UI/Views/Ide/Designers/Marketplace.cshtml
+++ b/Management/TomPIT.Management.UI/Views/Ide/Designers/Marketplace.cshtml
@@ -1,1 +1,8 @@
-﻿marketplace
+﻿@model TomPIT.Designers.MarketplaceDesigner
+
+@foreach (var i in Model.PublicPackages)
+{
+	<div class="package-card">
+		@i.Name
+	</div>
+}
