--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.css
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.css
@@ -93,3 +93,11 @@
 .dev-form label {
   color: #757575;
 }
+.package-card {
+  background-color: #FFF;
+  margin: 5px 15px;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  padding: 15px;
+  width: 250px;
+}
