--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
@@ -117,3 +117,12 @@
 .dev-form label{
 	color:@Grey600;
 }
+
+.package-card{
+	background-color:#FFF;
+	margin:5px 15px;
+	border:1px solid @Grey300;
+	border-radius:4px;
+	padding:15px;
+	width:250px;
+}
