--- a/Development/TomPIT.Ide.UI/Views/Ide/Selection/Selection.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Selection/Selection.cshtml
@@ -1,16 +1,16 @@
 ﻿@model TomPIT.Ide.IEnvironment
 
 <ul class="nav nav-tabs" id="devSelectionTabs" role="tablist">
-	<li class="nav-item">
+	<li class="nav-item" title="Properties">
 		<a class="nav-link active" id="devSelectionPropertyTab" data-toggle="tab" href="#devTabPropertyGrid" role="tab" aria-controls="properties" aria-selected="true"><i class="fal fa-tasks"></i></a>
 	</li>
-	<li class="nav-item">
+	<li class="nav-item" title="Events">
 		<a class="nav-link" id="devSelectionEventsTab" data-toggle="tab" href="#devTabEvents" role="tab" aria-controls="events" aria-selected="false"><i class="fal fa-bolt"></i></a>
 	</li>
-	<li class="nav-item">
+	<li class="nav-item" title="Toolbox">
 		<a class="nav-link" id="devSelectionToolboxTab" data-toggle="tab" href="#devTabToolbox" role="tab" aria-controls="toolbox" aria-selected="false"><i class="fal fa-toolbox"></i></a>
 	</li>
-	<li class="nav-item">
+	<li class="nav-item" title="Add items">
 		<a class="nav-link" id="devSelectionReflectorTab" data-toggle="tab" href="#devTabReflector" role="tab" aria-controls="reflector" aria-selected="false"><i class="fal fa-puzzle-piece"></i></a>
 	</li>
 </ul>
