--- a/Development/TomPIT.Ide.UI/Views/Ide/Selection/Events.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Selection/Events.cshtml
@@ -1,30 +1,39 @@
 ﻿@model TomPIT.Ide.IEnvironment
 
-<div class="dev-events" id="devEvents">
-    <ul class="list-unstyled">
-        @if (Model.Selection.Events.Events != null)
-        {
-            foreach (var i in Model.Selection.Events.Events)
-            {
-                var css = i.Blob != Guid.Empty ? "event-active" : string.Empty;
+@if (Model.Selection.Events.Events == null || Model.Selection.Events.Events.Count == 0)
+{
+	<div class="dev-no-data">
+		No events exist.
+	</div>
 
-                <li class="dev-event @css" data-id="@i.Name">
-                    @if (!string.IsNullOrWhiteSpace(i.Glyph))
-                    {<i class="@i.Glyph"></i>}
-                    @i.Name
-                </li>
-            }
-        }
-    </ul>
+	return;
+}
+
+<div class="dev-events" id="devEvents">
+	<ul class="list-unstyled">
+		@if (Model.Selection.Events.Events != null)
+		{
+			foreach (var i in Model.Selection.Events.Events)
+			{
+				var css = i.Blob != Guid.Empty ? "event-active" : string.Empty;
+
+				<li class="dev-event @css" data-id="@i.Name">
+					@if (!string.IsNullOrWhiteSpace(i.Glyph))
+					{<i class="@i.Glyph"></i>}
+					@i.Name
+				</li>
+			}
+		}
+	</ul>
 </div>
 
 <script>
-    $('#devEvents li').click(function () {
-        ide.loadSection({
-            section: 'designer',
-            data: {
-                property: $(this).attr('data-id')
-            }
-        });
-    });
+	$('#devEvents li').click(function () {
+		ide.loadSection({
+			section: 'designer',
+			data: {
+				property: $(this).attr('data-id')
+			}
+		});
+	});
 </script>
